# careAI-onboarding-agent

./: README.md  _default  lets_test.py  pyproject.toml  run_server.py  server.py  test copy.json  test.json  test_notion.py
data/: db_manager.py  structure.py
db/: conversations.json  customers.json
demo_ui/: index.html
demo_ui/static/css/: styles.css
demo_ui/static/js/: dashboard.js
demo_ui/templates/: customer_detail.html
framework/: functions.py  handlers.py
notion/: sample data.csv  table_def.csv
utility/: email_manager copy.py  email_manager.py
